--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>nerdspacelv</title>
 </head>
 <body>
+    <header>
+      <nav class="navbar navbar-expand navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">My Website</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item header-btns">
+              <a class="nav-link" href="#">Kalkulatri</a> <!-- Ja jautajumi par vardiem es vienk panemu no projeka ko es taisu nav bar, vins pretty basic pagaidam -->
+            </li>
+            <li class="nav-item header-btns">
+              <a class="nav-link" href="#">Par Mums</a>
+            </li>
+            <li class="nav-item header-btns">
+              <a class="nav-link" href="#">Kontakti</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <span class="navbar-toggler-icon"></span>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Kalkulatri</a></li>
+                <li><a class="dropdown-item" href="#">Par Mums</a></li>
+                <li><a class="dropdown-item" href="#">Kontakti</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    </header>
+
 
     <h2>Nothing here yet</h2>
     
     <script src="app.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </body>
 </html>
